[project]
name = "geo-score-integration"
version = "0.1.0"
description = "ETL pipelines to load geospatial datasets into the geo-score PostGIS database"
requires-python = ">=3.12.0"
dependencies = [
    "geopandas>=1.0",
    "sqlalchemy>=2.0",
    "geoalchemy2>=0.15",
    "psycopg2-binary>=2.9",
    "pydantic-settings>=2.0",
    "httpx>=0.28",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "typer>=0.15",
]

[project.scripts]
geo-integrate = "integration.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/integration"]

[tool.ruff]
target-version = "py312"
line-length = 100
